<?xml version="1.0"?>
<package>
  <name>lab2</name>
  <version>0.0.0</version>
  <description>Anro laboratorium 2</description>

  
  <maintainer email="przemek@todo.todo">przemek</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>


</package>
