<?xml version="1.0"?>
<package>
  <name>lab2</name>
  <version>0.0.0</version>
  <description>Anro laboratorium 2</description>

  
  <maintainer email="przemek@todo.todo">przemek</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>


</package>
